--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "    \n",
     "    def count_landmarks(x):\n",
     "        # count number of landmarks in x\n",
-    "        n = int(len(x) - dim_state) // dim_landmark\n",
+    "        n = (len(x) - dim_state) // dim_landmark\n",
     "        return n\n",
     "\n",
     "    def jacob_motion(x, u):\n",
@@ -75,7 +75,51 @@
     "\n",
     "        G = np.eye(dim_state) + Fx.T * jBu * Fx\n",
     "\n",
-    "        return G, jA"
+    "        return G, jBu\n",
+    "\n",
+    "    def get_landmark_pos(x, z):\n",
+    "\n",
+    "        zp = np.zeros((2, 1))\n",
+    "\n",
+    "        zp[0, 0] = x[0, 0] + z[0, 0] * math.cos(x[2, 0] + z[0, 1])\n",
+    "        zp[1, 0] = x[1, 0] + z[0, 0] * math.sin(x[2, 0] + z[0, 1])\n",
+    "\n",
+    "        return zp\n",
+    "\n",
+    "\n",
+    "    def get_landmark_pos_from_state(x, idx):\n",
+    "        # get the idx-th landmark from state matrix\n",
+    "        lm = x[(dim_state + dim_landmark * idx) : (dim_state + dim_landmark * (idx + 1)), :]\n",
+    "        return lm\n",
+    "\n",
+    "    \n",
+    "    def observation(xTrue, xd, u, RFID):\n",
+    "\n",
+    "        xTrue = motion_model(xTrue, u)\n",
+    "\n",
+    "        # add noise to gps x-y\n",
+    "        z = np.matrix(np.zeros((0, 3)))\n",
+    "\n",
+    "        for i in range(len(RFID[:, 0])):\n",
+    "\n",
+    "            dx = RFID[i, 0] - xTrue[0, 0]\n",
+    "            dy = RFID[i, 1] - xTrue[1, 0]\n",
+    "            d = math.sqrt(dx**2 + dy**2)\n",
+    "            angle = pi_2_pi(math.atan2(dy, dx))\n",
+    "            if d <= MAX_RANGE:\n",
+    "                dn = d + np.random.randn() * Qsim[0, 0]  # add noise\n",
+    "                anglen = angle + np.random.randn() * Qsim[1, 1]  # add noise\n",
+    "                zi = np.matrix([dn, anglen, i])\n",
+    "                z = np.vstack((z, zi))\n",
+    "\n",
+    "        # add noise to input\n",
+    "        ud1 = u[0, 0] + np.random.randn() * Rsim[0, 0]\n",
+    "        ud2 = u[1, 0] + np.random.randn() * Rsim[1, 1]\n",
+    "        ud = np.matrix([ud1, ud2]).T\n",
+    "\n",
+    "        xd = motion_model(xd, ud)\n",
+    "\n",
+    "        return xTrue, z, xd, ud\n"
    ]
   },
   {
@@ -103,28 +147,6 @@
     "                np.zeros((3, 2 * 5))\n",
     "            )\n",
     "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.eye(3)"
    ]
   },
   {
@@ -192,14 +214,15 @@
     "    return u\n",
     "\n",
     "\n",
-    "def observation(xTrue, xd, u, RFID):\n",
+    "def observation(xTrue, xd, u, landmarks):\n",
     "\n",
     "    xTrue = motion_model(xTrue, u)\n",
     "\n",
     "    # add noise to gps x-y\n",
     "    z = np.matrix(np.zeros((0, 3)))\n",
-    "\n",
-    "    for i in range(len(RFID[:, 0])):\n",
+    "    \n",
+    "    num_landmarks = len(landmarks[:, 0])\n",
+    "    for i in range(num_landmarks):\n",
     "\n",
     "        dx = RFID[i, 0] - xTrue[0, 0]\n",
     "        dy = RFID[i, 1] - xTrue[1, 0]\n",
