--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -10,8 +10,6 @@
     "\n",
     "Extended Kalman Filter SLAM example\n",
     "\n",
-    "author: Atsushi Sakai (@Atsushi_twi)\n",
-    "\n",
     "\"\"\"\n",
     "\n",
     "import numpy as np\n",
@@ -35,6 +33,13 @@
     "    dim_landmark = 2 # Landmark state dimension [x, y]\n",
     "    sensor_max_range = 20.0 # maximum observation range of the simulated sensor\n",
     "    M_DIST_TH = 2.0  # Threshold of Mahalanobis distance for data association.\n",
+    "\n",
+    "    # EKF state covariance\n",
+    "    Cx = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
+    "\n",
+    "    #  Simulation parameter\n",
+    "    Qsim = np.diag([0.2, np.deg2rad(1.0)])**2   # Covariance of process noise\n",
+    "    Rsim = np.diag([1.0, np.deg2rad(10.0)])**2  # Covariance of input noise\n",
     "\n",
     "    def get_u(self):\n",
     "        v = 1.0        # [m/s]\n",
@@ -76,9 +81,37 @@
     "        G = np.eye(dim_state) + Fx.T * jBu * Fx\n",
     "\n",
     "        return G, jBu\n",
+    "    \n",
+    "    def jacob_H(q, delta, x, i):\n",
+    "        # Jacobian of measurement model function h\n",
+    "        sq = math.sqrt(q)\n",
+    "        G = np.matrix(\n",
+    "            [\n",
+    "                [-sq * delta[0, 0], - sq * delta[1, 0], 0, sq * delta[0, 0], sq * delta[1, 0]],\n",
+    "                [delta[1, 0], - delta[0, 0], - 1.0, - delta[1, 0], delta[0, 0]]\n",
+    "            ]\n",
+    "        )\n",
+    "        G = G / q\n",
+    "        num_landmarks = count_landmarks(x)\n",
+    "        F1 = np.hstack(\n",
+    "            (\n",
+    "                np.eye(3), \n",
+    "                np.zeros((3, 2 * num_landmarks))\n",
+    "            )\n",
+    "        )\n",
+    "        F2 = np.hstack(\n",
+    "            (\n",
+    "                np.zeros((2, 3)), \n",
+    "                np.zeros((2, 2 * (i - 1))),\n",
+    "                np.eye(2), \n",
+    "                np.zeros((2, 2 * num_landmarks - 2 * i))\n",
+    "            )\n",
+    "        )\n",
+    "        F = np.vstack((F1, F2))\n",
+    "        H = G * F\n",
+    "        return H\n",
     "\n",
     "    def get_landmark_pos(x, z):\n",
-    "\n",
     "        zp = np.zeros((2, 1))\n",
     "\n",
     "        zp[0, 0] = x[0, 0] + z[0, 0] * math.cos(x[2, 0] + z[0, 1])\n",
@@ -86,40 +119,44 @@
     "\n",
     "        return zp\n",
     "\n",
-    "\n",
     "    def get_landmark_pos_from_state(x, idx):\n",
-    "        # get the idx-th landmark from state matrix\n",
+    "        # get the idx-th landmark position from state matrix\n",
     "        lm = x[(dim_state + dim_landmark * idx) : (dim_state + dim_landmark * (idx + 1)), :]\n",
     "        return lm\n",
     "\n",
-    "    \n",
-    "    def observation(xTrue, xd, u, RFID):\n",
+    "    def offset_angle(angle):\n",
+    "        # make sure angle is from 0 to 2*pi\n",
+    "        return (angle + math.pi) % (2 * math.pi) - math.pi\n",
+    "   \n",
+    "    def observation(x, x_hat, u, landmarks):\n",
+    "        # update new state\n",
+    "        x = motion_model(x, u)\n",
     "\n",
-    "        xTrue = motion_model(xTrue, u)\n",
-    "\n",
-    "        # add noise to gps x-y\n",
+    "        # measurement noise\n",
     "        z = np.matrix(np.zeros((0, 3)))\n",
+    "        # loop through all landmarks and append to measurement matrix if valid\n",
+    "        for i in range(len(landmarks[:, 0])):\n",
+    "            dx = landmarks[i, 0] - x[0, 0]  # x distance from i-th landmark to the position\n",
+    "            dy = landmarks[i, 1] - x[1, 0]  # y distance from i-th landmark to the position\n",
+    "            d = math.sqrt(dx**2 + dy**2)             # true l-2 distance between landmark and current true position\n",
+    "            angle = offset_angle(math.atan2(dy, dx)) # true angle measurement\n",
+    "            if d <= sensor_max_range:\n",
+    "                # if the landmark is in the detactable range of the sensor\n",
+    "                d_hat = d + np.random.randn() * Qsim[0, 0]          # measured distance plus process noise\n",
+    "                angle_hat = angle + np.random.randn() * Qsim[1, 1]  # measured angle plus process noise\n",
+    "                # put together the measurement matrix for the i-th landmark\n",
+    "                zi = np.matrix([d_hat, angle_hat, i]) # i-th measurements\n",
+    "                z = np.vstack((z, zi))                # all measurements\n",
     "\n",
-    "        for i in range(len(RFID[:, 0])):\n",
-    "\n",
-    "            dx = RFID[i, 0] - xTrue[0, 0]\n",
-    "            dy = RFID[i, 1] - xTrue[1, 0]\n",
-    "            d = math.sqrt(dx**2 + dy**2)\n",
-    "            angle = pi_2_pi(math.atan2(dy, dx))\n",
-    "            if d <= MAX_RANGE:\n",
-    "                dn = d + np.random.randn() * Qsim[0, 0]  # add noise\n",
-    "                anglen = angle + np.random.randn() * Qsim[1, 1]  # add noise\n",
-    "                zi = np.matrix([dn, anglen, i])\n",
-    "                z = np.vstack((z, zi))\n",
-    "\n",
-    "        # add noise to input\n",
-    "        ud1 = u[0, 0] + np.random.randn() * Rsim[0, 0]\n",
-    "        ud2 = u[1, 0] + np.random.randn() * Rsim[1, 1]\n",
-    "        ud = np.matrix([ud1, ud2]).T\n",
-    "\n",
-    "        xd = motion_model(xd, ud)\n",
-    "\n",
-    "        return xTrue, z, xd, ud\n"
+    "        # add control noise to all input u dimensions\n",
+    "        num_dim_u = len(u[:, 0])\n",
+    "        u_dims = []\n",
+    "        for i in range(num_dim_u):\n",
+    "            u_dim.append(u[i, 0] + np.random.randn() * Rsim[i, i])    \n",
+    "        u_hat = np.matrix(u_dims).T\n",
+    "        # predict new state predicted x and u\n",
+    "        x_hat = motion_model(x_hat, u_hat)\n",
+    "        return x, z, x_hat, u_hat"
    ]
   },
   {
@@ -413,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
