--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -18,6 +18,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From [Probabilistic Robotics](http://www.probabilistic-robotics.org/) book chapter 10.2 **SLAM with Extended Kalman Filters**.\n",
+    "\n",
+    "We will use $g(u_t, x_{t-1})$ to represent the general form of the nonlinear motion functions.\n",
+    "$$\n",
+    "x_t = g(u_t, x_{t-1}) + \\epsilon_t\n",
+    "= A_t x_{t-1} + B_t u_t + \\epsilon_t\n",
+    "$$\n",
+    "In state-space representation, we can have the following form:\n",
+    "$$\n",
+    "g(u_t, x_{t-1}) = A_t x_{t-1} + B_t u_t\n",
+    "$$\n",
+    "\n",
+    "Our measurement function takes the form of:\n",
+    "$$\n",
+    "z_t = h(x_t) + \\delta_t\n",
+    "$$\n",
+    "where the nonlinear measurement function $h(x_t)$ can also be represented in state-space as:\n",
+    "$$\n",
+    "h(x_t) = C_t x_t\n",
+    "$$\n",
+    "where $C_t$ is the measurement matrix that defines the model of measurement (which maps state $x_t$ to measurement $z_t$).\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
+    "$$\n",
+    "where \n",
+    "$$\n",
+    "G_t = \\frac{\\partial}{\\partial x} g(u_t, x_t)\n",
+    "= \\frac{\\partial}{\\partial x}\n",
+    "= I + F_x^T g_t F_x\n",
+    "$$\n",
+    "is the Jacobian of the (non-linear) motion function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,8 +78,11 @@
     "\n",
     "    #  Simulation parameter\n",
     "    Qsim = np.diag([0.2, np.deg2rad(1.0)])**2   # Covariance of process noise\n",
-    "    Rsim = np.diag([1.0, np.deg2rad(10.0)])**2  # Covariance of input noise\n",
+    "    Rsim = np.diag([1.0, np.deg2rad(10.0)])**2  # Covariance of measurement noise\n",
     "\n",
+    "    # Initialize a bunch of intermediate matrices\n",
+    "    def __init__():\n",
+    "        \n",
     "    def get_u(self):\n",
     "        v = 1.0        # [m/s]\n",
     "        yawrate = 0.1  # [rad/s]\n",
@@ -54,8 +96,8 @@
     "                       [0, 1.0, 0],\n",
     "                       [0, 0, 1.0]])\n",
     "        # input matrix 3x2\n",
-    "        B = np.matrix([[DT * np.cos(x[2, 0]), 0],\n",
-    "                       [DT * np.sin(x[2, 0]), 0],\n",
+    "        B = np.matrix([[time_dt * np.cos(x[2, 0]), 0],\n",
+    "                       [time_dt * np.sin(x[2, 0]), 0],\n",
     "                       [0.0, DT]])\n",
     "        # update state vector\n",
     "        x = A * x + B * u\n",
@@ -67,13 +109,14 @@
     "        return n\n",
     "\n",
     "    def jacob_motion(x, u):\n",
+    "        # mapping matrix Fx helps map actual state vector (dim_state)\n",
+    "        # into combined state vector (dim_state + dim_landmark*cnt_landmark)\n",
     "        Fx = np.hstack(\n",
     "            (\n",
     "                np.eye(dim_state),\n",
     "                np.zeros((dim_state, dim_landmark * count_landmarks(x)))\n",
     "            )\n",
     "        )\n",
-    "\n",
     "        jBu = np.matrix([[0.0, 0.0, -time_dt * u[0] * np.sin(x[2, 0])],\n",
     "                        [0.0, 0.0,   time_dt * u[0] * np.cos(x[2, 0])],\n",
     "                        [0.0, 0.0, 0.0]])\n",
@@ -84,6 +127,7 @@
     "    \n",
     "    def jacob_H(q, delta, x, i):\n",
     "        # Jacobian of measurement model function h\n",
+    "        # z_t = \n",
     "        sq = math.sqrt(q)\n",
     "        G = np.matrix(\n",
     "            [\n",
@@ -93,21 +137,23 @@
     "        )\n",
     "        G = G / q\n",
     "        num_landmarks = count_landmarks(x)\n",
-    "        F1 = np.hstack(\n",
+    "        # mapping matrix Fx helps map actual state vector (dim_state)\n",
+    "        # into combined state vector (dim_state + dim_landmark*cnt_landmark)\n",
+    "        Fx = np.hstack(\n",
     "            (\n",
-    "                np.eye(3), \n",
-    "                np.zeros((3, 2 * num_landmarks))\n",
+    "                np.eye(dim_state),\n",
+    "                np.zeros((dim_state, dim_landmark * count_landmarks(x)))\n",
     "            )\n",
     "        )\n",
     "        F2 = np.hstack(\n",
     "            (\n",
-    "                np.zeros((2, 3)), \n",
-    "                np.zeros((2, 2 * (i - 1))),\n",
-    "                np.eye(2), \n",
-    "                np.zeros((2, 2 * num_landmarks - 2 * i))\n",
+    "                np.zeros((dim_landmark, dim_state)), \n",
+    "                np.zeros((dim_landmark, dim_landmark * (i - 1))),\n",
+    "                np.eye(dim_landmark), \n",
+    "                np.zeros((dim_landmark, dim_landmark * num_landmarks - dim_landmark * i))\n",
     "            )\n",
     "        )\n",
-    "        F = np.vstack((F1, F2))\n",
+    "        F = np.vstack((Fx, F2))\n",
     "        H = G * F\n",
     "        return H\n",
     "\n",
@@ -156,7 +202,19 @@
     "        u_hat = np.matrix(u_dims).T\n",
     "        # predict new state predicted x and u\n",
     "        x_hat = motion_model(x_hat, u_hat)\n",
-    "        return x, z, x_hat, u_hat"
+    "        return x, z, x_hat, u_hat\n",
+    "    \n",
+    "    def calc_innovation(landmark, x_hat, P_hat, z, LMid):\n",
+    "        delta = landmark - x_hat[0:2]\n",
+    "        q = (delta.T * delta)[0, 0]\n",
+    "        zangle = math.atan2(delta[1], delta[0]) - xEst[2]\n",
+    "        zp = [math.sqrt(q), pi_2_pi(zangle)]\n",
+    "        y = (z - zp).T\n",
+    "        y[1] = pi_2_pi(y[1])\n",
+    "        H = jacobH(q, delta, xEst, LMid + 1)\n",
+    "        S = H * PEst * H.T + Cx[0:2, 0:2]\n",
+    "\n",
+    "        return y, S, H\n"
    ]
   },
   {
