--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "From [Probabilistic Robotics](http://www.probabilistic-robotics.org/) book chapter 10.2 **SLAM with Extended Kalman Filters**.\n",
     "\n",
+    "---\n",
     "We will use $g(u_t, x_{t-1})$ to represent the general form of the nonlinear motion functions.\n",
     "$$\n",
     "x_t = g(u_t, x_{t-1}) + \\epsilon_t\n",
@@ -43,17 +44,22 @@
     "$$\n",
     "where $C_t$ is the measurement matrix that defines the model of measurement (which maps state $x_t$ to measurement $z_t$).\n",
     "\n",
-    "\n",
+    "---\n",
+    "In EKF, the two nonlinear functions $g(u_t, x_{t-1})$ and $h(x_t)$ are locally linearized through first-order Taylor expansion:\n",
     "$$\n",
     "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
     "$$\n",
     "where \n",
     "$$\n",
     "G_t = \\frac{\\partial}{\\partial x} g(u_t, x_t)\n",
-    "= \\frac{\\partial}{\\partial x}\n",
+    "= \\frac{\\partial}{\\partial x} \\left( A_t x_{t-1} + B_t u_t \\right)\n",
+    "= A_t + \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
     "= I + F_x^T g_t F_x\n",
     "$$\n",
-    "is the Jacobian of the (non-linear) motion function."
+    "is the Jacobian of the (non-linear) motion function, and\n",
+    "$$\n",
+    "g_t = \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
+    "$$"
    ]
   },
   {
