--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -45,20 +45,67 @@
     "where $C_t$ is the measurement matrix that defines the model of measurement (which maps state $x_t$ to measurement $z_t$).\n",
     "\n",
     "---\n",
+    "We define actual agent's state as $x$, and use $y$ to denote the combined feature:\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "y_t \n",
+    "&= \n",
+    "\\begin{pmatrix}\n",
+    "    x_t\\\\\n",
+    "    m\n",
+    "\\end{pmatrix} \\\\\n",
+    "&=\n",
+    "\\begin{pmatrix}\n",
+    "    x_t & y_t & \\theta_t \\\\\n",
+    "    m_{1,x} & m_{1,y} & 0\\\\\n",
+    "    m_{2,x} & m_{2,y} & 0\\\\\n",
+    "    \\cdots & \\cdots & \\cdots \\\\\n",
+    "    m_{N,x} & m_{N,y} & 0\\\\\n",
+    "\\end{pmatrix} \\\\\n",
+    "\\end{split}\n",
+    "$$\n",
+    "where $m$ denotes the landmarks observed so far and $N$ is the total number of landmarks.\n",
+    "\n",
+    "---\n",
     "In EKF, the two nonlinear functions $g(u_t, x_{t-1})$ and $h(x_t)$ are locally linearized through first-order Taylor expansion:\n",
     "$$\n",
     "g(u_t, y_{t-1}) \\approx g(u_t, \\mu_{t-1}) + G_t(y_{t-1} - \\mu_{t-1})\n",
     "$$\n",
     "where \n",
     "$$\n",
-    "G_t = \\frac{\\partial}{\\partial x} g(u_t, x_t)\n",
-    "= \\frac{\\partial}{\\partial x} \\left( A_t x_{t-1} + B_t u_t \\right)\n",
-    "= A_t + \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
-    "= I + F_x^T g_t F_x\n",
+    "\\begin{split}\n",
+    "G_t &= \\frac{\\partial}{\\partial x} g(u_t, x_t) \\\\\n",
+    "&= \\frac{\\partial}{\\partial x} \\left( A_t x_{t-1} + B_t u_t \\right) \\\\\n",
+    "&= A_t + \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right) \\\\\n",
+    "&= I + F_x^T g_t F_x\n",
+    "\\end{split}\n",
     "$$\n",
     "is the Jacobian of the (non-linear) motion function, and\n",
     "$$\n",
     "g_t = \\frac{\\partial}{\\partial x} \\left( B_t u_t \\right)\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "$$\n",
+    "F_{x,k} = \n",
+    " \\begin{pmatrix}\n",
+    "  1&0&0 & & 0\\cdots0 & & 0&0&0 & & 0\\cdots0 \\\\\n",
+    "  0&1&0 & & 0\\cdots0 & & 0&0&0 & & 0\\cdots0 \\\\\n",
+    "  0&0&1 & & 0\\cdots0 & & 0&0&0 & & 0\\cdots0 \\\\\n",
+    "  \\\\\n",
+    "  0&0&0 & & 0\\cdots0 & & 1&0&0 & & 0\\cdots0 \\\\\n",
+    "  0&0&0 & & 0\\cdots0 & & 0&1&0 & & 0\\cdots0 \\\\\n",
+    "  0&0&0 & & 0\\cdots0 & & 0&0&1 & & 0\\cdots0 \\\\\n",
+    " \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "H_t^k = \\frac{1}{q_k} \n",
+    "\\begin{pmatrix}\n",
+    "   \\sqrt{q_k}\\delta_{k,x} & -\\sqrt{q_k}\\delta_{k,y} & 0 & -\\sqrt{q_k}\\delta_{k,x} & \\sqrt{q_k}\\delta_{k,y} \\\\\n",
+    "   \\delta_{k,y} & \\delta_{k,x} & -1 & -\\delta_{k,y} & -\\delta_{k,x}\n",
+    "\\end{pmatrix}\n",
+    "F_{x,k}\n",
     "$$"
    ]
   },
@@ -114,7 +161,10 @@
     "        n = (len(x) - dim_state) // dim_landmark\n",
     "        return n\n",
     "\n",
-    "    def jacob_motion(x, u):\n",
+    "    def jacobian_motion(x, u):\n",
+    "        '''\n",
+    "        Jacobian of motion function g\n",
+    "        '''\n",
     "        # mapping matrix Fx helps map actual state vector (dim_state)\n",
     "        # into combined state vector (dim_state + dim_landmark*cnt_landmark)\n",
     "        Fx = np.hstack(\n",
@@ -131,9 +181,10 @@
     "\n",
     "        return G, jBu\n",
     "    \n",
-    "    def jacob_H(q, delta, x, i):\n",
-    "        # Jacobian of measurement model function h\n",
-    "        # z_t = \n",
+    "    def jacobian_H(q, delta, x, i):\n",
+    "        '''\n",
+    "        Jacobian of measurement function h\n",
+    "        '''\n",
     "        sq = math.sqrt(q)\n",
     "        G = np.matrix(\n",
     "            [\n",
@@ -150,17 +201,17 @@
     "                np.eye(dim_state),\n",
     "                np.zeros((dim_state, dim_landmark * count_landmarks(x)))\n",
     "            )\n",
-    "        )\n",
-    "        F2 = np.hstack(\n",
+    "        ) # upper half of F_xk\n",
+    "        Fk = np.hstack(\n",
     "            (\n",
     "                np.zeros((dim_landmark, dim_state)), \n",
     "                np.zeros((dim_landmark, dim_landmark * (i - 1))),\n",
     "                np.eye(dim_landmark), \n",
     "                np.zeros((dim_landmark, dim_landmark * num_landmarks - dim_landmark * i))\n",
     "            )\n",
-    "        )\n",
-    "        F = np.vstack((Fx, F2))\n",
-    "        H = G * F\n",
+    "        ) # lower half of F_xk\n",
+    "        F_xk = np.vstack((Fx, Fk))\n",
+    "        H = G * F_xk\n",
     "        return H\n",
     "\n",
     "    def get_landmark_pos(x, z):\n",
