--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,12 @@
     "   \\delta_{k,y} & \\delta_{k,x} & -1 & -\\delta_{k,y} & -\\delta_{k,x}\n",
     "\\end{pmatrix}\n",
     "F_{x,k}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "Compute Kalman gain $K_t^i$:\n",
+    "$$\n",
+    "K_t^i = \\bar{\\Sigma}_t {H_t^i}^T \\left( H_t^i \\bar{\\Sigma}_t {H_t^i}^T + Q_t\\right)^{-1}\n",
     "$$"
    ]
   },
@@ -121,13 +127,13 @@
     "    # simulation parameters\n",
     "    time_dt = 0.1    # time step [s]\n",
     "    time_sim = 50.0  # total simulation time [s]\n",
-    "    dim_state = 3    # state dimension [x, y, yaw]\n",
-    "    dim_landmark = 2 # Landmark state dimension [x, y]\n",
+    "    ndim_state = 3    # state dimension [x, y, yaw]\n",
+    "    ndim_landmark = 2 # Landmark state dimension [x, y]\n",
     "    sensor_max_range = 20.0 # maximum observation range of the simulated sensor\n",
     "    M_DIST_TH = 2.0  # Threshold of Mahalanobis distance for data association.\n",
     "\n",
     "    # EKF state covariance\n",
-    "    Cx = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
+    "    Q_t = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
     "\n",
     "    #  Simulation parameter\n",
     "    Qsim = np.diag([0.2, np.deg2rad(1.0)])**2   # Covariance of process noise\n",
@@ -158,7 +164,7 @@
     "    \n",
     "    def count_landmarks(x):\n",
     "        # count number of landmarks in x\n",
-    "        n = (len(x) - dim_state) // dim_landmark\n",
+    "        n = (len(x) - ndim_state) // ndim_landmark\n",
     "        return n\n",
     "\n",
     "    def jacobian_motion(x, u):\n",
@@ -169,23 +175,32 @@
     "        # into combined state vector (dim_state + dim_landmark*cnt_landmark)\n",
     "        Fx = np.hstack(\n",
     "            (\n",
-    "                np.eye(dim_state),\n",
-    "                np.zeros((dim_state, dim_landmark * count_landmarks(x)))\n",
+    "                np.eye(ndim_state),\n",
+    "                np.zeros((ndim_state, ndim_landmark * count_landmarks(x)))\n",
     "            )\n",
     "        )\n",
     "        jBu = np.matrix([[0.0, 0.0, -time_dt * u[0] * np.sin(x[2, 0])],\n",
     "                        [0.0, 0.0,   time_dt * u[0] * np.cos(x[2, 0])],\n",
     "                        [0.0, 0.0, 0.0]])\n",
     "\n",
-    "        G = np.eye(dim_state) + Fx.T * jBu * Fx\n",
+    "        G = np.eye(ndim_state) + Fx.T * jBu * Fx\n",
     "\n",
     "        return G, jBu\n",
     "    \n",
-    "    def jacobian_H(q, delta, x, i):\n",
+    "    def jacobian_H(q, sq, delta, x, i):\n",
     "        '''\n",
     "        Jacobian of measurement function h\n",
+    "        \n",
+    "        INPUT:\n",
+    "            q : squared delta_k\n",
+    "            sq: square root of q\n",
+    "            delta: location error between landmark i and agent\n",
+    "            x: current state\n",
+    "            i: index of current landmark\n",
+    "            \n",
+    "        OUTPUT:\n",
+    "            H: Jacobian of measurement function h\n",
     "        '''\n",
-    "        sq = math.sqrt(q)\n",
     "        G = np.matrix(\n",
     "            [\n",
     "                [-sq * delta[0, 0], - sq * delta[1, 0], 0, sq * delta[0, 0], sq * delta[1, 0]],\n",
@@ -193,21 +208,21 @@
     "            ]\n",
     "        )\n",
     "        G = G / q\n",
-    "        num_landmarks = count_landmarks(x)\n",
     "        # mapping matrix Fx helps map actual state vector (dim_state)\n",
     "        # into combined state vector (dim_state + dim_landmark*cnt_landmark)\n",
+    "        num_landmarks = count_landmarks(x)\n",
     "        Fx = np.hstack(\n",
     "            (\n",
-    "                np.eye(dim_state),\n",
-    "                np.zeros((dim_state, dim_landmark * count_landmarks(x)))\n",
+    "                np.eye(ndim_state),\n",
+    "                np.zeros((ndim_state, ndim_landmark * num_landmarks))\n",
     "            )\n",
     "        ) # upper half of F_xk\n",
     "        Fk = np.hstack(\n",
     "            (\n",
-    "                np.zeros((dim_landmark, dim_state)), \n",
-    "                np.zeros((dim_landmark, dim_landmark * (i - 1))),\n",
-    "                np.eye(dim_landmark), \n",
-    "                np.zeros((dim_landmark, dim_landmark * num_landmarks - dim_landmark * i))\n",
+    "                np.zeros((ndim_landmark, ndim_state)), \n",
+    "                np.zeros((ndim_landmark, ndim_landmark * (i - 1))),\n",
+    "                np.eye(ndim_landmark), \n",
+    "                np.zeros((ndim_landmark, ndim_landmark * num_landmarks - ndim_landmark * i))\n",
     "            )\n",
     "        ) # lower half of F_xk\n",
     "        F_xk = np.vstack((Fx, Fk))\n",
@@ -224,7 +239,7 @@
     "\n",
     "    def get_landmark_pos_from_state(x, idx):\n",
     "        # get the idx-th landmark position from state matrix\n",
-    "        lm = x[(dim_state + dim_landmark * idx) : (dim_state + dim_landmark * (idx + 1)), :]\n",
+    "        lm = x[(ndim_state + ndim_landmark * idx) : (ndim_state + ndim_landmark * (idx + 1)), :]\n",
     "        return lm\n",
     "\n",
     "    def offset_angle(angle):\n",
@@ -238,7 +253,8 @@
     "        # measurement noise\n",
     "        z = np.matrix(np.zeros((0, 3)))\n",
     "        # loop through all landmarks and append to measurement matrix if valid\n",
-    "        for i in range(len(landmarks[:, 0])):\n",
+    "        num_landmarks = len(landmarks[:, 0])\n",
+    "        for i in range(num_landmarks):\n",
     "            dx = landmarks[i, 0] - x[0, 0]  # x distance from i-th landmark to the position\n",
     "            dy = landmarks[i, 1] - x[1, 0]  # y distance from i-th landmark to the position\n",
     "            d = math.sqrt(dx**2 + dy**2)             # true l-2 distance between landmark and current true position\n",
@@ -248,30 +264,96 @@
     "                d_hat = d + np.random.randn() * Qsim[0, 0]          # measured distance plus process noise\n",
     "                angle_hat = angle + np.random.randn() * Qsim[1, 1]  # measured angle plus process noise\n",
     "                # put together the measurement matrix for the i-th landmark\n",
-    "                zi = np.matrix([d_hat, angle_hat, i]) # i-th measurements\n",
+    "                zi = np.matrix([d_hat, angle_hat, i]) # measurement of i-th landmark\n",
     "                z = np.vstack((z, zi))                # all measurements\n",
     "\n",
     "        # add control noise to all input u dimensions\n",
-    "        num_dim_u = len(u[:, 0])\n",
+    "        ndim_u = len(u[:, 0])\n",
     "        u_dims = []\n",
-    "        for i in range(num_dim_u):\n",
+    "        for i in range(ndim_u):\n",
     "            u_dim.append(u[i, 0] + np.random.randn() * Rsim[i, i])    \n",
     "        u_hat = np.matrix(u_dims).T\n",
     "        # predict new state predicted x and u\n",
     "        x_hat = motion_model(x_hat, u_hat)\n",
     "        return x, z, x_hat, u_hat\n",
     "    \n",
-    "    def calc_innovation(landmark, x_hat, P_hat, z, LMid):\n",
-    "        delta = landmark - x_hat[0:2]\n",
-    "        q = (delta.T * delta)[0, 0]\n",
-    "        zangle = math.atan2(delta[1], delta[0]) - xEst[2]\n",
-    "        zp = [math.sqrt(q), pi_2_pi(zangle)]\n",
-    "        y = (z - zp).T\n",
-    "        y[1] = pi_2_pi(y[1])\n",
-    "        H = jacobH(q, delta, xEst, LMid + 1)\n",
-    "        S = H * PEst * H.T + Cx[0:2, 0:2]\n",
+    "    def calc_innovation(landmark_idx, landmark, x_hat, P_hat, z):\n",
+    "        # location delta\n",
+    "        delta = landmark - x_hat[0:2] \n",
+    "        # predicted distance measurement\n",
+    "        q = (delta.T * delta)[0, 0]   \n",
+    "        sq = np.sqrt(q)\n",
+    "        # predicted angle measurement\n",
+    "        z_angle = math.atan2(delta[1], delta[0]) - xEst[2] \n",
+    "        # put together, z_hat = predicted measurement vector\n",
+    "        z_hat = [sq, offset_angle(z_angle)]\n",
+    "        # innovation\n",
+    "        y = (z - z_hat).T\n",
+    "        y[1] = offset_angle(y[1])\n",
+    "        # Jacobian of measurement function\n",
+    "        H = jacobH(q, sq, delta, x_hat, landmark_idx + 1)\n",
+    "        # compute S, P_hat is the estimated covariance of measurement\n",
+    "        # and Q_t is the pre-defined covariance of state \n",
+    "        # (we are only using) the upper-left 2-by-2 \n",
+    "        S = H * P_hat * H.T + Q_t[0:2, 0:2]\n",
+    "        \n",
+    "        return y, S, H\n",
+    "    \n",
+    "    def ekf_slam(x_hat, P_hat, u, z):\n",
+    "        # Prediction phase\n",
+    "        nS = ndim_state\n",
+    "        x_hat[0:ns] = motion_model(xEst[0:ns], u)\n",
+    "        G, Fx = jacob_motion(xEst[0:S], u)\n",
+    "        PEst[0:ns, 0:ns] = G.T * PEst[0:S, 0:S] * G + Fx.T * Cx * Fx\n",
+    "        initP = np.eye(2)\n",
     "\n",
-    "        return y, S, H\n"
+    "        # Update phase\n",
+    "        ndim_z = len(z[:, 0])\n",
+    "        for iz in range(ndim_z):  # for each observation\n",
+    "            minid = search_correspond_LM_ID(xEst, PEst, z[iz, 0:2])\n",
+    "\n",
+    "            nLM = calc_n_LM(xEst)\n",
+    "            if minid == nLM:\n",
+    "                print(\"New LM\")\n",
+    "                # Extend state and covariance matrix\n",
+    "                xAug = np.vstack((xEst, calc_LM_Pos(xEst, z[iz, :])))\n",
+    "                PAug = np.vstack((np.hstack((PEst, np.zeros((len(xEst), LM_SIZE)))),\n",
+    "                                  np.hstack((np.zeros((LM_SIZE, len(xEst))), initP))))\n",
+    "                xEst = xAug\n",
+    "                PEst = PAug\n",
+    "\n",
+    "            lm = get_LM_Pos_from_state(xEst, minid)\n",
+    "            y, S, H = calc_innovation(lm, xEst, PEst, z[iz, 0:2], minid)\n",
+    "\n",
+    "            K = PEst * H.T * np.linalg.inv(S)\n",
+    "            xEst = xEst + K * y\n",
+    "            PEst = (np.eye(len(xEst)) - K * H) * PEst\n",
+    "\n",
+    "        xEst[2] = pi_2_pi(xEst[2])\n",
+    "\n",
+    "        return xEst, PEst\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.25      , 0.        , 0.        ],\n",
+       "       [0.        , 0.25      , 0.        ],\n",
+       "       [0.        , 0.        , 0.27415568]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_t = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2"
    ]
   },
   {
