--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
     "    ndim_state = 3    # state dimension [x, y, yaw]\n",
     "    ndim_landmark = 2 # Landmark state dimension [x, y]\n",
     "    sensor_max_range = 20.0 # maximum observation range of the simulated sensor\n",
-    "    M_DIST_TH = 2.0  # Threshold of Mahalanobis distance for data association.\n",
+    "    m_dist_threshold = 2.0  # Threshold of Mahalanobis distance for data association.\n",
     "\n",
     "    # EKF state covariance\n",
     "    Q_t = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
@@ -166,6 +166,40 @@
     "        # count number of landmarks in x\n",
     "        n = (len(x) - ndim_state) // ndim_landmark\n",
     "        return n\n",
+    "\n",
+    "    def get_landmark_pos(x, z):\n",
+    "        zp = np.zeros((2, 1))\n",
+    "\n",
+    "        zp[0, 0] = x[0, 0] + z[0, 0] * math.cos(x[2, 0] + z[0, 1])\n",
+    "        zp[1, 0] = x[1, 0] + z[0, 0] * math.sin(x[2, 0] + z[0, 1])\n",
+    "\n",
+    "        return zp\n",
+    "\n",
+    "    def get_landmark_pos_from_state(x, idx):\n",
+    "        # get the idx-th landmark position from state matrix\n",
+    "        lm = x[(ndim_state + ndim_landmark * idx) : (ndim_state + ndim_landmark * (idx + 1)), :]\n",
+    "        return lm\n",
+    "\n",
+    "    def offset_angle(angle):\n",
+    "        # make sure angle is from 0 to 2*pi\n",
+    "        return (angle + math.pi) % (2 * math.pi) - math.pi\n",
+    "\n",
+    "    def search_landmark_id(xAug, PAug, zi):\n",
+    "        \"\"\"\n",
+    "        Find and return the landmark that minimizes the Mahalanobis distance from the agent\n",
+    "        \"\"\"\n",
+    "        nLM = count_landmarks(xAug)\n",
+    "        min_dist = np.infty\n",
+    "        min_idx = 0\n",
+    "        for i in range(nLM):\n",
+    "            lm = get_landmark_pos_from_state(xAug, i)\n",
+    "            y, S, H = calc_innovation(i, lm, xAug, PAug, zi)\n",
+    "            mdist = y.T * np.linalg.inv(S) * y\n",
+    "            if mdist < min_dist:\n",
+    "                min_dist = mdist\n",
+    "                min_idx = i\n",
+    "            \n",
+    "        return min_idx\n",
     "\n",
     "    def jacobian_motion(x, u):\n",
     "        '''\n",
@@ -228,23 +262,6 @@
     "        F_xk = np.vstack((Fx, Fk))\n",
     "        H = G * F_xk\n",
     "        return H\n",
-    "\n",
-    "    def get_landmark_pos(x, z):\n",
-    "        zp = np.zeros((2, 1))\n",
-    "\n",
-    "        zp[0, 0] = x[0, 0] + z[0, 0] * math.cos(x[2, 0] + z[0, 1])\n",
-    "        zp[1, 0] = x[1, 0] + z[0, 0] * math.sin(x[2, 0] + z[0, 1])\n",
-    "\n",
-    "        return zp\n",
-    "\n",
-    "    def get_landmark_pos_from_state(x, idx):\n",
-    "        # get the idx-th landmark position from state matrix\n",
-    "        lm = x[(ndim_state + ndim_landmark * idx) : (ndim_state + ndim_landmark * (idx + 1)), :]\n",
-    "        return lm\n",
-    "\n",
-    "    def offset_angle(angle):\n",
-    "        # make sure angle is from 0 to 2*pi\n",
-    "        return (angle + math.pi) % (2 * math.pi) - math.pi\n",
     "   \n",
     "    def observation(x, x_hat, u, landmarks):\n",
     "        # update new state\n",
@@ -302,7 +319,7 @@
     "    def ekf_slam(x_hat, P_hat, u, z):\n",
     "        # Prediction phase\n",
     "        nS = ndim_state\n",
-    "        x_hat[0:ns] = motion_model(xEst[0:ns], u)\n",
+    "        x_hat[0:nS] = motion_model(xEst[0:ns], u)\n",
     "        G, Fx = jacob_motion(xEst[0:S], u)\n",
     "        PEst[0:ns, 0:ns] = G.T * PEst[0:S, 0:S] * G + Fx.T * Cx * Fx\n",
     "        initP = np.eye(2)\n",
@@ -310,19 +327,19 @@
     "        # Update phase\n",
     "        ndim_z = len(z[:, 0])\n",
     "        for iz in range(ndim_z):  # for each observation\n",
-    "            minid = search_correspond_LM_ID(xEst, PEst, z[iz, 0:2])\n",
+    "            lm_id = search_landmark_id(x_hat, P_hat, z[iz, 0:2])\n",
     "\n",
-    "            nLM = calc_n_LM(xEst)\n",
+    "            nLM = count_landmarks(x_hat)\n",
     "            if minid == nLM:\n",
     "                print(\"New LM\")\n",
     "                # Extend state and covariance matrix\n",
     "                xAug = np.vstack((xEst, calc_LM_Pos(xEst, z[iz, :])))\n",
     "                PAug = np.vstack((np.hstack((PEst, np.zeros((len(xEst), LM_SIZE)))),\n",
     "                                  np.hstack((np.zeros((LM_SIZE, len(xEst))), initP))))\n",
-    "                xEst = xAug\n",
-    "                PEst = PAug\n",
+    "                x_hat = xAug\n",
+    "                P_hat = PAug\n",
     "\n",
-    "            lm = get_LM_Pos_from_state(xEst, minid)\n",
+    "            lm = get_landmark_pos_from_state(x_hat, minid)\n",
     "            y, S, H = calc_innovation(lm, xEst, PEst, z[iz, 0:2], minid)\n",
     "\n",
     "            K = PEst * H.T * np.linalg.inv(S)\n",
