--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -133,22 +133,78 @@
     "    m_dist_threshold = 2.0  # Threshold of Mahalanobis distance for data association.\n",
     "\n",
     "    # EKF state covariance\n",
-    "    Q_t = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
+    "    R_t = np.diag([0.5, 0.5, np.deg2rad(30.0)])**2\n",
     "\n",
     "    #  Simulation parameter\n",
     "    Qsim = np.diag([0.2, np.deg2rad(1.0)])**2   # Covariance of process noise\n",
     "    Rsim = np.diag([1.0, np.deg2rad(10.0)])**2  # Covariance of measurement noise\n",
     "\n",
     "    # Initialize a bunch of intermediate matrices\n",
-    "    def __init__():\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def run():\n",
+    "        time = 0.0\n",
+    "        # landmark positions [x, y]\n",
+    "        landmarks = np.array([[10.0, -2.0],\n",
+    "                         [15.0, 10.0],\n",
+    "                         [3.0, 15.0],\n",
+    "                         [-5.0, 20.0]])\n",
+    "\n",
+    "        # State Vector [x y yaw v]'\n",
+    "        x_hat = np.matrix(np.zeros((ndim_state, 1)))\n",
+    "        x = np.matrix(np.zeros((ndim_state, 1)))\n",
+    "        P_hat = np.eye(ndim_state)\n",
+    "\n",
+    "        xDR = np.matrix(np.zeros((ndim_state, 1)))  # Dead reckoning\n",
+    "\n",
+    "        # history\n",
+    "        hxEst = xEst\n",
+    "        hxTrue = xTrue\n",
+    "        hxDR = xTrue\n",
+    "\n",
+    "        while SIM_TIME >= time:\n",
+    "            time += DT\n",
+    "            u = calc_input()\n",
+    "\n",
+    "            xTrue, z, xDR, ud = observation(xTrue, xDR, u, RFID)\n",
+    "\n",
+    "            xEst, PEst = ekf_slam(xEst, PEst, ud, z)\n",
+    "\n",
+    "            x_state = xEst[0:STATE_SIZE]\n",
+    "\n",
+    "            # store data history\n",
+    "            hxEst = np.hstack((hxEst, x_state))\n",
+    "            hxDR = np.hstack((hxDR, xDR))\n",
+    "            hxTrue = np.hstack((hxTrue, xTrue))\n",
+    "\n",
+    "            if show_animation:\n",
+    "                #plt.cla()\n",
+    "\n",
+    "                plt.plot(RFID[:, 0], RFID[:, 1], \"*k\")\n",
+    "                plt.plot(xEst[0], xEst[1], \".r\")\n",
+    "\n",
+    "                # plot landmark\n",
+    "                for i in range(calc_n_LM(xEst)):\n",
+    "                    plt.plot(xEst[STATE_SIZE + i * 2],\n",
+    "                             xEst[STATE_SIZE + i * 2 + 1], \"xg\")\n",
+    "\n",
+    "                plt.plot(np.array(hxTrue[0, :]).flatten(),\n",
+    "                         np.array(hxTrue[1, :]).flatten(), \"-b\")\n",
+    "                plt.plot(np.array(hxDR[0, :]).flatten(),\n",
+    "                         np.array(hxDR[1, :]).flatten(), \"-k\")\n",
+    "                plt.plot(np.array(hxEst[0, :]).flatten(),\n",
+    "                         np.array(hxEst[1, :]).flatten(), \"-r\")\n",
+    "                plt.axis(\"equal\")\n",
+    "                plt.grid(True)\n",
+    "                plt.pause(0.001)\n",
     "        \n",
-    "    def get_u(self):\n",
+    "    def get_u():\n",
     "        v = 1.0        # [m/s]\n",
     "        yawrate = 0.1  # [rad/s]\n",
     "        u = np.matrix([v, yawrate]).T\n",
     "        return u\n",
     "\n",
-    "    def motion_model(self, x, u):\n",
+    "    def motion_model(x, u):\n",
     "        # https://en.wikipedia.org/wiki/State-space_representation\n",
     "        # state matrix 3x3\n",
     "        A = np.matrix([[1.0, 0, 0],\n",
@@ -219,7 +275,7 @@
     "\n",
     "        G = np.eye(ndim_state) + Fx.T * jBu * Fx\n",
     "\n",
-    "        return G, jBu\n",
+    "        return G, Fx\n",
     "    \n",
     "    def jacobian_H(q, sq, delta, x, i):\n",
     "        '''\n",
@@ -310,45 +366,46 @@
     "        # Jacobian of measurement function\n",
     "        H = jacobH(q, sq, delta, x_hat, landmark_idx + 1)\n",
     "        # compute S, P_hat is the estimated covariance of measurement\n",
-    "        # and Q_t is the pre-defined covariance of state \n",
+    "        # and R_t is the pre-defined covariance of state \n",
     "        # (we are only using) the upper-left 2-by-2 \n",
-    "        S = H * P_hat * H.T + Q_t[0:2, 0:2]\n",
+    "        S = H * P_hat * H.T + R_t[0:2, 0:2]\n",
     "        \n",
     "        return y, S, H\n",
     "    \n",
     "    def ekf_slam(x_hat, P_hat, u, z):\n",
-    "        # Prediction phase\n",
+    "        # Predict\n",
     "        nS = ndim_state\n",
-    "        x_hat[0:nS] = motion_model(xEst[0:ns], u)\n",
-    "        G, Fx = jacob_motion(xEst[0:S], u)\n",
-    "        PEst[0:ns, 0:ns] = G.T * PEst[0:S, 0:S] * G + Fx.T * Cx * Fx\n",
-    "        initP = np.eye(2)\n",
-    "\n",
-    "        # Update phase\n",
+    "        x_hat[0:nS] = motion_model(x_hat[0:nS], u)\n",
+    "        G, Fx = jacobian_motion(x_hat[0:nS], u)\n",
+    "        P_hat[0:nS, 0:nS] = G.T * P_hat[0:nS, 0:nS] * G + Fx.T * R_t * Fx\n",
+    "        P_init = np.eye(2) # initialize covariance matrix to identify\n",
+    "        \n",
+    "        # Update\n",
     "        ndim_z = len(z[:, 0])\n",
     "        for iz in range(ndim_z):  # for each observation\n",
     "            lm_id = search_landmark_id(x_hat, P_hat, z[iz, 0:2])\n",
-    "\n",
     "            nLM = count_landmarks(x_hat)\n",
-    "            if minid == nLM:\n",
-    "                print(\"New LM\")\n",
+    "            if lm_id == nLM:\n",
+    "                print(f'Found new landmark (total {nLM})')\n",
     "                # Extend state and covariance matrix\n",
-    "                xAug = np.vstack((xEst, calc_LM_Pos(xEst, z[iz, :])))\n",
-    "                PAug = np.vstack((np.hstack((PEst, np.zeros((len(xEst), LM_SIZE)))),\n",
-    "                                  np.hstack((np.zeros((LM_SIZE, len(xEst))), initP))))\n",
-    "                x_hat = xAug\n",
-    "                P_hat = PAug\n",
+    "                x_hat = np.vstack((x_hat, get_landmark_pos(x_hat, z[iz, :])))\n",
+    "                P_hat = np.vstack(\n",
+    "                    (\n",
+    "                        np.hstack((P_hat, np.zeros((len(x_hat), ndim_landmark)))),\n",
+    "                        np.hstack((np.zeros((ndim_landmark, len(x_hat))), P_init))\n",
+    "                    )\n",
+    "                )\n",
+    "            \n",
+    "            lm = get_landmark_pos_from_state(x_hat, lm_id)\n",
+    "            y, S, H = calc_innovation(lm_id, lm, x_hat, P_hat, z[iz, 0:2])\n",
+    "            # Kalman gain\n",
+    "            K = P_hat * H.T * np.linalg.inv(S)\n",
+    "            x_hat = x_hat + K * y\n",
+    "            P_hat = (np.eye(len(x_hat)) - K * H) * P_hat\n",
     "\n",
-    "            lm = get_landmark_pos_from_state(x_hat, minid)\n",
-    "            y, S, H = calc_innovation(lm, xEst, PEst, z[iz, 0:2], minid)\n",
+    "        x_hat[2] = offset_angle(x_hat[2])\n",
     "\n",
-    "            K = PEst * H.T * np.linalg.inv(S)\n",
-    "            xEst = xEst + K * y\n",
-    "            PEst = (np.eye(len(xEst)) - K * H) * PEst\n",
-    "\n",
-    "        xEst[2] = pi_2_pi(xEst[2])\n",
-    "\n",
-    "        return xEst, PEst\n"
+    "        return x_hat, P_hat\n"
    ]
   },
   {
