--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -148,21 +148,21 @@
     "         [-5.0, 20.0]]\n",
     "    )\n",
     "\n",
-    "    def __init__():\n",
+    "    def __init__(self):\n",
     "        if self.show_animation:\n",
     "            # plot ground truth landmarks\n",
-    "            line_lm, = plt.plot(0, 0, \"*k\")\n",
+    "            self.line_lm, = plt.plot(0, 0, \"*k\")\n",
     "            # plot estimated of agent's location\n",
-    "            line_x_hat, = plt.plot(0, 0, \".r\")\n",
+    "            self.line_x_hat, = plt.plot(0, 0, \".r\")\n",
     "            # plot estimated landmarks\n",
-    "            line_lm_hat = []\n",
-    "            for i in range(self.count_landmarks(x_hat)):\n",
+    "            self.line_lm_hat = []\n",
+    "            for i in range(self.landmarks.shape[0]):\n",
     "                line, = plt.plot(0, 0, \"xg\")\n",
-    "                line_lm_hat.append(line)\n",
+    "                self.line_lm_hat.append(line)\n",
     "            # plot histories\n",
-    "            line_hx, = plt.plot(0, 0, \"-b\")\n",
-    "            line_hx_dr, = plt.plot(0, 0, \"-k\")\n",
-    "            line_hx_hat, = plt.plot(0, 0, \"-r\")\n",
+    "            self.line_hx, = plt.plot(0, 0, \"-b\")\n",
+    "            self.line_hx_dr, = plt.plot(0, 0, \"-k\")\n",
+    "            self.line_hx_hat, = plt.plot(0, 0, \"-r\")\n",
     "\n",
     "            plt.axis(\"equal\")\n",
     "            plt.grid(True)\n",
