--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -205,6 +205,8 @@
     "            if self.show_animation:\n",
     "                self.line_x_hat.set_xdata(x_hat[0])\n",
     "                self.line_x_hat.set_ydata(x_hat[1])\n",
+    "                for i in range(self.count_landmarks(x_hat)):\n",
+    "                    line_x_hat[i].set_xdata()\n",
     "                plt.pause(0.01)\n",
     "                self.fig.canvas.draw()\n",
     "# #                 plt.cla()\n",
