--- a/Python/EKF_SLAM.ipynb
+++ b/Python/EKF_SLAM.ipynb
@@ -22,7 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From [Probabilistic Robotics](http://www.probabilistic-robotics.org/) book chapter 10.2 **SLAM with Extended Kalman Filters**.\n",
+    "References:\n",
+    "1. [Probabilistic Robotics](http://www.probabilistic-robotics.org/) book chapter 10.2 **SLAM with Extended Kalman Filters**.\n",
+    "2. Lecture notes of the [Robot Mapping class by Wolfram Burgard](http://ais.informatik.uni-freiburg.de/teaching/ws18/mapping/)\n",
     "\n",
     "---\n",
     "In this example, we used a simple 2D nonlinear dynamical system model. The state of the agent, $x$, is defined as:\n",
@@ -44,11 +46,55 @@
     "where $v$ and $\\omega$ denotes forward and angular velocity, respectively.\n",
     "\n",
     "---\n",
+    "The (nonlinear) dynamics of motion model is given in the standard state-space form:\n",
+    "$$\n",
+    "x_t = A~x_{t-1} + B~u_t\n",
+    "$$\n",
+    "where\n",
+    "$$\n",
+    "A = \n",
+    "\\begin{pmatrix}\n",
+    "    1&0&0\\\\\n",
+    "    0&1&0\\\\\n",
+    "    0&0&1\\\\\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "and \n",
+    "$$\n",
+    "B = \n",
+    "\\begin{pmatrix}\n",
+    "    \\Delta t~\\cos{\\theta} & 0\\\\\n",
+    "    \\Delta t~\\sin{\\theta} & 0\\\\\n",
+    "    0 & \\Delta t\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "is the state (or system) matrix and input matrix, respectively.\n",
+    "\n",
+    "---\n",
     "The Kalman filter is a two phase process. First we predict the new state based on our internal motion model and then update the predicted with the information brought by the new measurement and compute the best state estimation by weighting between predicted and inferred state according to the Kalman gain.\n",
     "\n",
     "The prediction phase can be best described below:\n",
     "\n",
     "    1. Motion update:\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "    \\bar{\\mu}_t &= g(u_t, \\mu_{t-1}) \\\\\n",
+    "    &= A \\mu_{t-1} + F_x^T \\left( B~u_t \\right)\n",
+    "    &= \n",
+    "    \\begin{pmatrix}\n",
+    "        1&0&0\\\\\n",
+    "        0&1&0\\\\\n",
+    "        0&0&1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\mu_{t-1} + F_x^T \n",
+    "    \\begin{pmatrix}\n",
+    "        1&0&0\\\\\n",
+    "        0&1&0\\\\\n",
+    "        0&0&1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "\\end{split}\n",
+    "$$\n",
+    "    where\n",
     "$$\n",
     "F_x = \n",
     " \\begin{pmatrix}\n",
@@ -57,21 +103,7 @@
     "  0&0&1 & 0\\cdots0 \\\\\n",
     " \\end{pmatrix}\n",
     "$$\n",
-    "\n",
-    "$$\n",
-    "\\begin{split}\n",
-    "    \\bar{\\mu}_t &= g(u_t, \\mu_{t-1}) \\\\\n",
-    "    &= A \\mu_{t-1} + F_x^T B u_t\n",
-    "    &= \n",
-    "    \\begin{pmatrix}\n",
-    "        1&0&0\\\\\n",
-    "        0&1&0\\\\\n",
-    "        0&0&1\\\\\n",
-    "    \\end{pmatrix}\n",
-    "    \\mu_{t-1} + F_x^T \n",
-    "\\end{split}\n",
-    "$$\n",
-    "\n",
+    "    is an utility matrix that helps map $B~u_t$ to the same shape as $\\mu$\n",
     "\n",
     "$$\n",
     "\\begin{pmatrix}\n",
